# ai-interview-twin

./: .env.example  .gitignore  PRD.md  README.md  test_api.py
backend/: config.py  init_embeddings.py  main.py  pyproject.toml
backend/data/: users.example.json  vectors.example.json
backend/models/: profile.py
backend/routers/: interview.py  users.py
backend/services/: embedding_service.py  interview_service.py  llm_service.py  user_service.py  user_service_backup.py  user_service_fixed.py
frontend/: .gitignore  README.md  USER_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: LoadingSpinner.jsx  StatusIndicator.jsx  Toast.jsx
frontend/src/pages/: Home.jsx  Interview.jsx  Profile.jsx
frontend/src/services/: api.js
